WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
104469
REGRESSION (
r137003
): failures in MicroData tests on EFL, GTK
https://bugs.webkit.org/show_bug.cgi?id=104469
Summary
REGRESSION (r137003): failures in MicroData tests on EFL, GTK
Zan Dobersek
Reported
2012-12-09 00:58:34 PST
r137003
introduced 5 failures in MicroData layout tests on GTK and EFL ports (which are, to my knowledge, the only ports enabling the feature).
http://trac.webkit.org/changeset/137003
fast/dom/MicroData/nameditem-must-be-case-sensitive.html fast/dom/MicroData/nameditem-must-return-correct-item-properties.html fast/dom/MicroData/nameditem-returns-propertynodelist.html fast/dom/MicroData/properties-collection-nameditem-test.html fast/dom/MicroData/propertynodelist-getvalues-test.html
http://test-results.appspot.com/dashboards/flakiness_dashboard.html#group=%40ToT%20-%20webkit.org&tests=fast%2Fdom%2FMicroData
Attachments
Fixes the bug
(3.61 KB, patch)
2012-12-09 10:31 PST
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
Results with the patch applied
(33.22 KB, application/zip)
2012-12-09 10:51 PST
,
Chris Dumez
no flags
Details
Patch for landing
(5.62 KB, patch)
2012-12-09 19:59 PST
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2012-12-09 03:50:36 PST
Skipped for EFL port in
http://trac.webkit.org/changeset/137062
and GTK port in
http://trac.webkit.org/changeset/137059
.
Ryosuke Niwa
Comment 2
2012-12-09 10:31:52 PST
Created
attachment 178425
[details]
Fixes the bug
Ryosuke Niwa
Comment 3
2012-12-09 10:35:28 PST
Could someone who have access to EFL or GTK port test this patch? Somehow my DRT doesn’t enable micro data bindings properly even though it’s definitely compiling things.
Ryosuke Niwa
Comment 4
2012-12-09 10:36:31 PST
I think we were treating PropertyNodeList* as if it were Node* prior to
r137003
. I don’t even know why it worked.
Chris Dumez
Comment 5
2012-12-09 10:46:17 PST
(In reply to
comment #3
)
> Could someone who have access to EFL or GTK port test this patch? Somehow my DRT doesn’t enable micro data bindings properly even though it’s definitely compiling things.
Sure, I'm going to give it a try now.
Chris Dumez
Comment 6
2012-12-09 10:51:03 PST
Created
attachment 178427
[details]
Results with the patch applied Sadly, the patch does not fix the tests. Please see attachment.
Ryosuke Niwa
Comment 7
2012-12-09 11:19:33 PST
(In reply to
comment #6
)
> Created an attachment (id=178427) [details] > Results with the patch applied > > Sadly, the patch does not fix the tests. Please see attachment.
That's surprising. You rebuilt the webkit before running tests, right? (run build-webkit before running run-webkit-tests).
Chris Dumez
Comment 8
2012-12-09 11:26:01 PST
(In reply to
comment #7
)
> (In reply to
comment #6
) > > Created an attachment (id=178427) [details] [details] > > Results with the patch applied > > > > Sadly, the patch does not fix the tests. Please see attachment. > > That's surprising. You rebuilt the webkit before running tests, right? (run build-webkit before running run-webkit-tests).
Yes, I did :) And I tried again and I clearly see that the modified file is being rebuilt: Scanning dependencies of target webcore_efl [ 9%] Building CXX object Source/WebCore/CMakeFiles/webcore_efl.dir/bindings/js/JSHTMLCollectionCustom.cpp.o Linking CXX shared library ../../lib/libwebcore_efl.so However, those 5 MicroData tests are still failing.
Chris Dumez
Comment 9
2012-12-09 11:37:40 PST
(In reply to
comment #8
)
> (In reply to
comment #7
) > > (In reply to
comment #6
) > > > Created an attachment (id=178427) [details] [details] [details] > > > Results with the patch applied > > > > > > Sadly, the patch does not fix the tests. Please see attachment. > > > > That's surprising. You rebuilt the webkit before running tests, right? (run build-webkit before running run-webkit-tests). > > Yes, I did :) > > And I tried again and I clearly see that the modified file is being rebuilt: > Scanning dependencies of target webcore_efl > [ 9%] Building CXX object Source/WebCore/CMakeFiles/webcore_efl.dir/bindings/js/JSHTMLCollectionCustom.cpp.o > Linking CXX shared library ../../lib/libwebcore_efl.so > > However, those 5 MicroData tests are still failing.
I tried running fast/dom/MicroData/nameditem-must-be-case-sensitive.html (one of the tests that is failing) and added a printf in JSHTMLCollection::nameGetter(). It appears JSHTMLCollection::nameGetter() is not called.
Ryosuke Niwa
Comment 10
2012-12-09 19:59:21 PST
Created
attachment 178460
[details]
Patch for landing
WebKit Review Bot
Comment 11
2012-12-09 21:40:07 PST
Comment on
attachment 178460
[details]
Patch for landing Clearing flags on attachment: 178460 Committed
r137107
: <
http://trac.webkit.org/changeset/137107
>
WebKit Review Bot
Comment 12
2012-12-09 21:40:12 PST
All reviewed patches have been landed. Closing bug.
Chris Dumez
Comment 13
2012-12-10 00:23:58 PST
Ok, I can confirm that the patch that landed fixes the issue for EFL port, thanks. I unskipped the tests in
http://trac.webkit.org/changeset/137116
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug