REGRESSION (r137003): failures in MicroData tests on EFL, GTK https://bugs.webkit.org/show_bug.cgi?id=104469

Reviewed by Darin Adler.

Fix the regression by calling propertyNodeList on HTMLPropertiesCollection
in the named getter for HTMLCollection. It's a miracle that the old code prior to r137003
worked at all since the return type of namedItem was different.

Existing tests cover this.

* bindings/js/JSHTMLCollectionCustom.cpp:
(WebCore::JSHTMLCollection::nameGetter):
* bindings/v8/custom/V8HTMLCollectionCustom.cpp:
(WebCore::V8HTMLCollection::namedPropertyGetter):


Canonical link: https://commits.webkit.org/122666@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@137107 268f45cc-cd09-0410-ab3c-d52691b4dbfc