Source/WebCore/bindings/v8/custom/V8HTMLCollectionCustom.cpp
@@ -32,6 +32,8 @@
 #include "V8HTMLCollection.h"
 
 #include "HTMLCollection.h"
+#include "HTMLPropertiesCollection.h"
+#include "PropertyNodeList.h"
 #include "V8Binding.h"
 #include "V8HTMLAllCollection.h"
 #include "V8HTMLFormControlsCollection.h"
@@ -51,6 +53,14 @@ v8::Handle<v8::Value> V8HTMLCollection::namedPropertyGetter(v8::Local<v8::String
         return v8Undefined();
 
     HTMLCollection* imp = V8HTMLCollection::toNative(info.Holder());
+#if ENABLE(MICRODATA)
+    if (imp->type() == ItemProperties) {
+        PropertyNodeList* item = static_cast<HTMLPropertiesCollection*>(imp)->propertyNodeList(toWebCoreAtomicString(name));
+        if (!item)
+            return v8Undefined();
+        return toV8(item, info.Holder(), info.GetIsolate());
+    }
+#endif
     Node* item = imp->namedItem(toWebCoreAtomicString(name));
     if (!item)
         return v8Undefined();
